--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/routing-utils": "^4.0.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.12.9",
